# chainlit_workshop

./: .env.example  .gitignore  PROGRESSION.md  README.md  chainlit_workshop_prd.md  opportunity.txt  pyproject.toml
assets/: conversation_examples.md  logo_specification.md
data/restaurant/: business_info.json  catering.md  faq.md  menu.json  wine_list.md
docs/: CLIENT_PITCH_TEMPLATE.md  PRODUCTION_CHECKLIST.md  WORKSHOP_GUIDE.md
scripts/: 01_bare_minimum_chatbot.py  02_with_system_prompt.py  03a_input_guardrails.py  03b_output_guardrails.py  04a_tools_availability.py  04b_tools_reservation.py  04c_tools_menu_business.py  05_rag_basic.py  06_final_polished.py
scripts/utils/: setup_vectordb.py  test_queries.py  validate_setup.py
